Animated Armature stops when not reflected by ImageMirror #45110

Closed
opened 2015-06-19 15:30:03 +02:00 by Quentin · 14 comments

Hello,

I'm having trouble using a ImageMirror and an animated Armature in the game engine :

  • The mirror works well ;
  • The animation only runs when the mesh appears on the mirror,
    when the object isn't rendered on the mirror the animation stops.

Tested with 2.70 and 2.75-rc1 with the same result.
Use right and left to rotate the mirror :
ImageMirror_Armature_BUG.blend

Thanks

Info :
Win7 64bits
NVIDIA GeForce GT 640M
system-info.txt

Hello, I'm having trouble using a ImageMirror and an animated Armature in the game engine : * The mirror works well ; * The animation only runs when the mesh appears on the mirror, when the object isn't rendered on the mirror the animation stops. Tested with 2.70 and 2.75-rc1 with the same result. Use right and left to rotate the mirror : [ImageMirror_Armature_BUG.blend](https://archive.blender.org/developer/F194190/ImageMirror_Armature_BUG.blend) Thanks Info : Win7 64bits NVIDIA GeForce GT 640M [system-info.txt](https://archive.blender.org/developer/F194189/system-info.txt)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @QT1

Added subscriber: @QT1

Added subscriber: @QuentinWenger

Added subscriber: @QuentinWenger

Same behaviour here.

Note that if the mirror faces away from the camera, the armature moves again.

EDIT: Note 2: enabling Occlusion Culling changes the behaviour:

  • On Blender 2.70, fixes the problem
  • On Blender 2.74/75, keeps the problem, but narrows it.

EDIT 2: 2.68 works fine, 2.69 no more.

Same behaviour here. Note that if the mirror faces away from the camera, the armature moves again. EDIT: Note 2: enabling Occlusion Culling changes the behaviour: - On Blender 2.70, fixes the problem - On Blender 2.74/75, keeps the problem, but narrows it. EDIT 2: 2.68 works fine, 2.69 no more.
Jorge Bernal self-assigned this 2015-06-20 02:33:38 +02:00
Jorge Bernal removed their assignment 2015-06-20 02:34:18 +02:00
Member

Added subscriber: @JorgeBernalMartinez

Added subscriber: @JorgeBernalMartinez
Quentin Wenger self-assigned this 2015-06-20 07:50:15 +02:00
Member

The .blend also shows a perfomance drop in armature animation due to an assert in interp_qt_qtqt at math_rotation.cpp in BLI library. This is provocated by a commit during 2.75 development (2.74 works ok).

The .blend also shows a perfomance drop in armature animation due to an assert in interp_qt_qtqt at math_rotation.cpp in BLI library. This is provocated by a commit during 2.75 development (2.74 works ok).
Member

Added subscribers: @mahalin, @Moguri

Added subscribers: @mahalin, @Moguri
Member

Forget my last comment.

This comes from commit 4fac29ca0e

I add to @Moguri and @mahalin as it is related to culling behaviour

Forget my last comment. This comes from commit 4fac29ca0e I add to @Moguri and @mahalin as it is related to culling behaviour

Added subscriber: @you.le

Added subscriber: @you.le

Hello! After bisecting all the night I found the commit which is behind the bug: http://www.mediafire.com/view/w9ae9nlr3xd2ilo/bisect.txt (bisect copy).
19dee5e413 . Quentin, it's up to you! (à toi de jouer!)

Hello! After bisecting all the night I found the commit which is behind the bug: http://www.mediafire.com/view/w9ae9nlr3xd2ilo/bisect.txt (bisect copy). 19dee5e413453cc4a2a98c17aaf39f00e04f7619 . Quentin, it's up to you! (à toi de jouer!)
https://developer.blender.org/diffusion/B/change/master/source/gameengine/Ketsji/KX_Scene.cpp%3B19dee5e413453cc4a2a98c17aaf39f00e04f7619

This issue was referenced by d979ac4cc9

This issue was referenced by d979ac4cc9967c5dce27461926396abe5de54b3d

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Removed subscriber: @mahalin

Removed subscriber: @mahalin
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#45110
No description provided.