BGE: Fix T45110, T44174, armature animations update and mirror render.

Reveiwers:Moguri, Matpi, youle